@@ -45,20 +45,20 @@ class SlickFormatter extends SlickImageBase implements SlickFormatterInterface {
     }
 
     $settings += [
-      'absolute_path'   => $absolute_path,
-      'bundle'          => $entity->bundle(),
-      'caption'         => empty($settings['caption']) ? [] : array_filter($settings['caption']),
-      'count'           => $count,
-      'entity_id'       => $entity_id,
-      'entity_type_id'  => $entity_type_id,
-      'field_type'      => $field->getType(),
-      'field_name'      => $field_name,
-      'id'              => $id,
-      'internal_path'   => $internal_path,
-      'nav'             => !empty($settings['optionset_thumbnail']) && $count > 1,
-      'lightbox'        => !empty($settings['media_switch']) && strpos($settings['media_switch'], 'box') !== FALSE,
-      'target_type'     => $target_type,
-      'cache_metadata'  => ['keys' => [$id, $view_mode, $optionset]],
+      'absolute_path'  => $absolute_path,
+      'bundle'         => $entity->bundle(),
+      'caption'        => empty($settings['caption']) ? [] : array_filter($settings['caption']),
+      'count'          => $count,
+      'entity_id'      => $entity_id,
+      'entity_type_id' => $entity_type_id,
+      'field_type'     => $field->getType(),
+      'field_name'     => $field_name,
+      'id'             => $id,
+      'internal_path'  => $internal_path,
+      'nav'            => !empty($settings['optionset_thumbnail']) && $count > 1,
+      'lightbox'       => !empty($settings['media_switch']) && strpos($settings['media_switch'], 'box') !== FALSE,
+      'target_type'    => $target_type,
+      'cache_metadata' => ['keys' => [$id, $view_mode, $optionset]],
     ];
 
     $build['optionset'] = $this->manager()->load($optionset);
